# one

./: .bazelrc  WORKSPACE  copy.bara.sky
bazel/: BUILD.bazel
bazel/copts/: GENERATED_copts.bzl  configure_copts.bzl
codelab/cpp-smoke-app/: BUILD.bazel
codelab/glog_smoke_app/: BUILD.bazel  main.cc
codelab/protobuf_encoder/: BUILD.bazel
directory_manifest/: BUILD.bazel
gtl/: BUILD.bazel
gtl/container/: BUILD.bazel
gtl/hash/: BUILD.bazel
gtl/numeric/: BUILD.bazel
gtl/test/: BUILD.bazel
nail/: BUILD.bazel
zkclient/: BUILD.bazel
