load("@rules_cc//cc:defs.bzl", "cc_binary")
load(
    "//bazel/copts:configure_copts.bzl",
    "ONE_DEFAULT_COPTS",
    "ONE_DEFAULT_LINKOPTS",
)

cc_binary(
    name = "glog_smoke_app",
    srcs = ["main.cc"],
    copts = ONE_DEFAULT_COPTS,
    linkopts = ONE_DEFAULT_LINKOPTS,
    deps = [
        "//third_party/absl/flags:flag",
        "//third_party/absl/flags:parse",
        "//third_party/glog",
    ],
)
